styles.css
/********************************
      Top-Level Elements
*********************************/

html {
  font-family: sans-serif;
}

body {
  /*background-color: rgba( 0, 0, 255, 0.2 );*/
}

/********************************
         Page Header
*********************************/

header {
  position: fixed;
  z-index: 1;
  top: 0;
  width: 100%;
  background-color: gray;
  height: 60px;
  padding: 20px;
  overflow: hidden;
}

.branding {
  float: left;
  height: 60px;
  line-height: 60px; /* simple vert-centering */
  font-size: 32px;
  letter-spacing: .4em;
  font-style: bold;
  color: rgba( 255,255,255, 0.75 );
}

/********************************
         Search Panel
*********************************/

.search-panel {
  float: right;
  margin-right: 5%;
  height: 60px;
  line-height: 60px;
}

.search-panel input {
  padding: 8px 15px;
  width: 300px;
  background: rgba( 50, 50, 50, 0.2 );
  border: 0px solid #dbdbdb;
  font-size: 20px;
  color: lightgray;
}

.search-panel button {
  position: relative;
  padding: 9px 15px;
  left: -4px;
  top: -1px;
  background-color: #207cca;
  border: none;
  color: rgba( 255, 255, 255, 0.75 );
  font-size: 18px;
  letter-spacing: .1em;
  text-transform: uppercase;
}

.search-panel button:hover {
  background-color: blue;
}

.search-panel button:focus {
  outline: 0;
}

.search-panel button[disabled] {
  background-color: transparent;
  color: rgba( 255, 255, 255, 0.3 );
  border: 1px solid;
}


/********************************
     Main Content (images)
*********************************/

#main {
  padding: 108px 8px 8px 8px;
  text-align: center;
}

.image-list {
  padding: 0;
  margin: 0;
  list-style: none;
}

li {
  display: inline-block;
  margin-right: 8px;
}

.img-container {
  width: 200px;
  height: 160px;
  border-radius: 3px;
  overflow: hidden;
}

img { /* full resolution, vert. clipped & centered */
  width: 100%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
}

